# riot-sbom

./: LICENSE  README.md  pyproject.toml  run-tests.sh
src/riot_sbom/processing/: build_scanner.py
src/riot_sbom/util/: git_queries.py  text_processing.py
